--- a/cBoxMat.css
+++ b/cBoxMat.css
@@ -39,13 +39,14 @@ height: 0.0001px;
 }
 
 .circCB {
-    height: 30px;
-    width: 30px;
+    height: 20px;
+    width: 20px;
+    top:5px;
     left: -7px;
     border-radius: 50%;
     background-color: rgba(112, 65, 151, .0);
     position: absolute;
-    transform: translate(-50%, -20%) scale(.7);
+    transform: translate(-50%, -50%) scale(.7);
 }
 
 .hidCB:checked~.circCB,
